# DB_parser_HH

./: README.md  pyproject.toml
database/: db.sql  db_creator.py  db_manager.py
main/: main.py
src/: config.py  db.ini
utils/: hh_parser.py
